--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <link rel="stylesheet" href="css/styles.css">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Frontend Mentor | Todo app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Todo
-
-  <!-- Add dynamic number --> items left
-
-  All
-  Active 
-  Completed
-
-  Clear Completed
-
-  Drag and drop to reorder list
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <title>Frontend Mentor | Todo app</title>
+  </head>
+  <body class="container">
+    <header>
+      <h1>Todo</h1><img src="assets/icon-moon.svg" alt="Dark Mode">
+    </header>
+    <main class="todo">
+      <div>
+        <form action="">
+          <input type="text" placeholder="Create a new todo..." class="todo-input">
+        </form>
+      </div>
+      <div>
+        <ul>
+          <li>
+            <input type="checkbox"> <p>Complete online Javascript course</p>
+            <img src="assets/icon-cross.svg">
+          </li>
+        </ul>
+        <div>
+          <span>items left</span>
+          <div><span>All</span> <span>Active</span><span>Completed</span></div>
+          <span>Clear Completed</span>
+        </div>
+      </div>
+      <span>Drag and drop to reorder list</span>
+    </main>
+  </body>
 </html>
